# school

./: .gitignore  README.md
Italiano/: Appunti.md
OOC/: main.c  string_manipulation.c  string_manipulation.h
OOC/strings/: main  main.c  string_manipulation.c  string_manipulation.h
c/: tmp.c
c/blackjack/: data.h  fn.c  main  main.c
c/gdr/: README.md  main
c/hashmaps/: hashmap_1.c
c/homework_04-19-2023/: es_1.c  es_2.c  es_3.c  es_4.c  es_5.c
c/libraries/: comodino.h  math.h
c/mem/: data_strutures.c
c/no_name/: es_04-05-2023.c  es_04-05-23.c  es_04-12-2023.c  es_04-12-23.c  es_05-05-2023.c  es_05-05-23.c  es_1.c  es_10-05-23.c  es_16-03-23.c  es_17-03-23.c  es_2.c  es_23-01-2023.c  es_23-03-23.c  es_24-03-23.c  es_3.c  es_4.c  main
c/pacman/: main  map_1  pacman.c  pacman.h  test  test.c
c/quarta/: main.c
c/sockets/: web_client  web_client.c
c/sorting_algorithms/: bool_bubble_sort.c  bubble_sort.c  bubble_user_selected.c
c/various/: anagram.c  autobus.c  binary_search.c  calcolatrice_funzioni.c  card_dealing.c  cifratore.c  conv_func.c  craps.c  credito.c  decifratore.c  distinte_final.c  divisori.c  even.c  fig.c  flipcoin.c  floor.c  floyd.c  forme_geometriche.c  funzione1.c  funzione2.c  garage.c  gdr.c  geometria_functions.c  hanoi.c  hour.c  inverticif.c  ipotenusa.c  istogram.c  istogramma_verticale.c  main  (+29 more)
cpp/: bubble_sort.cpp  exception_handling.cpp  main
java/: .gitignore
python/: str.py
rust/como-irc/: Cargo.toml
rust/como-irc/src/: channel.rs  client.rs  main.rs  message.rs  server.rs
xml/: notebook.xml  order.xml
(+479 files in other folders)
